# jupyterlab-nitro-ai-judge

./: .gitignore  README.md  install.json  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: ci.yml  publish.yml
build-core/: package.json
jupyter-config/jupyter_server_config.d/: jupyterlab_nitro_ai_judge.json
jupyterlab_nitro_ai_judge/: __init__.py  handlers.py
jupyterlab_nitro_ai_judge/labextension/: package.json
jupyterlab_nitro_ai_judge/labextension/static/: 509.184ac3a97dbc2a99fe11.js  509.25bb290821f7c753e856.js  509.316ea9e421757dd73065.js  509.4bcda1ae8f60102d1920.js  509.929830f7a6f46297246c.js  509.c0ef73b21ca66e6fbda2.js  509.c3dd6ca1e03a598b133f.js  665.2a39668c84c63e419bee.js  665.463bd0ff93cf59d5f3d3.js  665.5e3002555dda51703263.js  665.7dbfcb5fcec00bc8e491.js  665.80da2e8f5a0e86a6f6e7.js  remoteEntry.0351f33f1291303ad46f.js  remoteEntry.159e08d8dd6a707b4b14.js  remoteEntry.32bbf7cff9e6c9e450ac.js  remoteEntry.992b0fd3ffe0ca8c31b2.js  remoteEntry.a083728aa8142b71af7f.js  remoteEntry.b5d4f38f3cebb6544b86.js  remoteEntry.b9d83a8f6e6bdfc00c65.js  remoteEntry.c012dff8fe6ff38c579b.js  remoteEntry.ca994c49a065f69674d6.js  remoteEntry.ce75548b341dca128c6b.js  style.js  third-party-licenses.json
src/: index.tsx
style/: index.css
